--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
       </div>
      
     </div>
-     <div class="imagem-sobre fade-in">
+     <div class="imagem-sobre fade-in t">
         <img src="../dist/images/equipe_trabalhando.webp" alt="Imagem da equipe da pizzaria em ação no forno a lenha">
       </div>
   </div>
