--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <ul>
             <li><a class="link-nav" href="#home">Início</a></li>
             <li><a class="link-nav" href="#sobre">Sobre</a></li>
-            <li><a class="link-nav" href="#">Sabores</a></li>
+            <li><a class="link-nav" href="#cardapio">Sabores</a></li>
             <li><a class="link-nav" href="#contato">Contato</a></li>
           </ul>
         </nav>
