--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
               <img src="images/slide2.webp" alt="Forno à lenha tradicional">
               <div class="slide-content">
                 <h1 class="chamada-destaque">Sabor com História</h1>
-                <a href="#reserva" class="btn-destaque">Reserve sua Mesa</a>
+                <a href="#cardapio" class="btn-destaque">Sabores</a>
               </div>
             </div>
         
