--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 
       </div>
         <!-- Pizzas Especiais -->
-<div class="categoria-cardapio">
+<div class="categoria-cardapio" style="margin-top: 64px;">
   <h3>Pizzas Especiais</h3>
   <div class="itens-cardapio">
 
