--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <!-- Logo -->
         <div class="logo">
-          <a href="#">Pizzaria F</a>
+          <img src="../dist/images/logo.png" alt="logo">
         </div>
 
         <!-- Main Nav-->
