--- a/index.html
+++ b/index.html
@@ -85,14 +85,14 @@
       <main>
 
       <!-- Botão de Whats app flutuante -->
-        <a
+       <!--  <a
           href="https://wa.me/5599999999999"
           class="whatsapp-float"
           target="_blank"
           aria-label="Fale conosco no WhatsApp"
         >
           <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
-        </a>
+        </a> -->
 
         <section id="home" class="hero-slider">
           <div class="slider-wrapper">
@@ -427,7 +427,7 @@
           <div class="footer-grid">
             <div class="footer-logo " >
               <a href="#home">
-              <img src="./img/logo.png" alt="logo pizzaria armagedom"><a href="#home" >Pizzaria E</a>
+              <img src="../dist/images/logo.png" alt="logo pizzaria armagedom"><a href="#home" >Pizzaria E</a>
               <p>Sabor autêntico, tradição e qualidade no seu prato.</p>
             </div>
       
