--- a/index.html
+++ b/index.html
@@ -398,10 +398,10 @@
                   <li><strong>📞 Telefone:</strong> (11) 98765-4321</li>
                   <li><strong>📧 E-mail:</strong> contato@pizzariae.com.br</li>
                   <li><strong>⏰ Horário:</strong> Todos os dias, das 18h às 23h</li>
-                  <li> <a href="https://wa.me/5511987654321" target="_blank" class=" btn-whatsapp">
+                  <!-- <li> <a href="https://wa.me/5511987654321" target="_blank" class=" btn-whatsapp">
                   <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp" width="20" style="margin-right:8px;">
                   Falar no WhatsApp
-                </a></li>
+                </a></li> -->
                 </ul>
               </div>
         
